--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Eszes Bálint"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Computer scientist. Artist. Minimalist."
   location         : "Hungary"
   employer         :
   pubmed           : 
