--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /year-archive/
 
   - title: "BDStudio"
-    url: /bdstudio/
+    url: /bdstudio
 
   - title: "Privacy Policy"
     url: /terms/
