Added seo tags and Google Search Console verification tag

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification :
+google_site_verification : "V9H3Oo6FDmjlRgPaf5Wqlxdgm4LikBsPV08abIKu-pc"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
@@ -189,6 +189,7 @@ collections:
 #    permalink: /:collection/:path/
 
 
+
 # Defaults
 defaults:
   # _posts
@@ -265,6 +266,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
+  - jekyll-seo-tag
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
@@ -272,6 +274,8 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jemoji
+  - jekyll-redirect-from
+  - jekyll-seo-tag
 
 
 # Archives
